--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <NAV>
                 Nosotros
                 Anuncios
-                Blog
+                Blog MMMMMM
                 Contacto
             </NAV>
         
