--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>TP Integrador</title>
+    <title>TP Integrador Maxi</title>
     <!-- Google Fonts -->
 
     <!-- Estilos CSS -->
