--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container-fluid">
         <a class="navbar-brand conf" href="#">
           <img
-            src="./assets/codoacodo.png"
+            src="assets/codoacodo.png"
             alt="Logo"
             width="150"
             height="80"
