--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                       <div class="card h-100">
-                        <img src="./assets/steve.jpg" class="card-img-top" alt="...">
+                        <img src="assets/steve.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <span class="badge text-bg-warning">JavaScript</span> <span class="badge text-bg-primary">React</span>
                           <h5 class="card-title">Steve Jobs</h5>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="col">
                       <div class="card h-100">
-                        <img src="./assets/bill.jpg" class="card-img-top" alt="...">
+                        <img src="assets/bill.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <span class="badge text-bg-warning">JavaScript</span> <span class="badge text-bg-primary">React</span>  
                           <h5 class="card-title">Bill Gates</h5>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="col">
                       <div class="card h-100">
-                        <img src="./assets/ada.jpeg" class="card-img-top" alt="...">
+                        <img src="assets/ada.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <span class="badge text-bg-secondary">Negocios</span> <span class="badge text-bg-danger">Startups</span>
                           <h5 class="card-title">Ada Lovelace</h5>
