--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
             </div>
         
         </div>
+        <h1 align="center">MGZ @ 2022</h1>
     </footer>
 
     <!--Bootstrap Script-->
