--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
             <div class="row mx-auto">
               <ul class="navbar-nav">
                 <div class="col col-2 text-center">
+                  <h6 align="center">MGZ @ 2022</h6>
                   <li class="nav-item">
                     <a class="nav-link active text-white" aria-current="page" href="#">Preguntas Frecuentes</a>
                   </li>
