--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
             <div class="formulario">
                 <div class="row g-3">
                     <div class="col">
-                      <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                      <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
                     </div>
                     <div class="col">
-                      <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+                      <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido">
                     </div>
                 </div>
         
